Restructuring of project to be Java 8 compatible
This will appear to be a new project; however, this is also the first version good enough to be called beta, so the past project can be discarded without as it was not yet actually published. Tests still need some touchup, though.